# mcp-arxiv

./: .gitignore  README.md  pyproject.toml
src/arxiv_mcp_server/: config.py  server.py
src/arxiv_mcp_server/prompts/: handlers.py  prompts.py
